iPhone alignment fixes

--- a/contactus.css
+++ b/contactus.css
@@ -127,7 +127,7 @@ button:hover
     }
 }
 
-@media screen and (max-width: 680px)
+@media screen and (max-width: 800px)
 {
     .form
     {
